option('external_fmt',      type: 'boolean', value: false, description: 'Use external fmt package instead of the bundled')
option('enable_examples',   type: 'boolean', value: true, description: 'Build examples')
option('enable_benchmarks', type: 'boolean', value: false, description: 'Build benchmarks')
option('enable_tests',      type: 'boolean', value: false, description: 'Build tests')
option('library_type',      type: 'combo', choices: ['static', 'shared'], value: 'static', description: 'Library build type')
option('no_exceptions',      type: 'boolean', value: false, description: 'Disabled exceptions - abort() instead any error')
