# Copyright(c) 2015-present, Gabi Melman & spdlog contributors.
# Distributed under the MIT License (http://opensource.org/licenses/MIT)

workspace(name = "spdlogDemo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "spdlog",
    build_file = "//:spdlog.BUILD",
    sha256 = "f0114a4d3c88be9e696762f37a7c379619443ce9d668546c61b21d41affe5b62",
    strip_prefix = "spdlog-1.7.0",
    urls = ["https://github.com/gabime/spdlog/archive/v1.7.0.tar.gz"],
)